--- a/.github/workflows/360T7-padavanonly-mini.yml
+++ b/.github/workflows/360T7-padavanonly-mini.yml
@@ -8,8 +8,8 @@ on:
          description: 'clean ccache'
          default: 'false'
 
-  #schedule:
-  #- cron: 0 17 * * 1
+  schedule:
+  - cron: 0 17 * * 1
 
 env:
   REPO_URL: https://github.com/padavanonly/immortalwrtARM
@@ -35,7 +35,7 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
          sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
-         sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.eu.org/init_build_environment.sh)'
+  #       sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.eu.org/init_build_environment.sh)'
          sudo timedatectl set-timezone "$TZ"
          sudo mkdir -p /workdir
          sudo chown $USER:$GROUPS /workdir
