--- a/.github/workflows/360T7-padavanonly-mini.yml
+++ b/.github/workflows/360T7-padavanonly-mini.yml
@@ -9,7 +9,7 @@ on:
          default: 'false'
 
 schedule:
-  - cron: 0 17 * * 1
+  - cron: '0 17 * * 1'
 
 env:
   REPO_URL: https://github.com/padavanonly/immortalwrtARM
