--- a/.github/workflows/360T7-padavanonly-mini.yml
+++ b/.github/workflows/360T7-padavanonly-mini.yml
@@ -141,6 +141,7 @@ jobs:
     - name: Delete older releases
       uses: dev-drprasad/delete-older-releases@v0.3.3
       with:
+        repo: <owner>/<repoName> 
         keep_latest: 3
         delete_tags: true
       env:
