--- a/.github/workflows/update-checker-padavanonly.yml
+++ b/.github/workflows/update-checker-padavanonly.yml
@@ -2,7 +2,7 @@ name: Update Checker padavanonly
 
 env:
   REPO_URL: https://github.com/padavanonly/immortalwrtARM
-  REPO_BRANCH: 21.02
+  REPO_BRANCH: openwrt-21.02
 
 on:
   workflow_dispatch:
