--- a/doc/config/mt7981-ax3000-mtwifi-cfg.config
+++ b/doc/config/mt7981-ax3000-mtwifi-cfg.config
@@ -333,3 +333,10 @@ CONFIG_first_card_name="MT7981"
 # CONFIG_MTK_PRE_CAL_TRX_SET2_SUPPORT is not set
 # CONFIG_MTK_RLM_CAL_CACHE_SUPPORT is not set
 # CONFIG_MTK_SNIFFER_RADIOTAP_SUPPORT is not set
+CONFIG_PACKAGE_kmod-usb-net-rndis=y
+CONFIG_PACKAGE_kmod-usb-net=y
+CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_kmod-usb3=y
+CONFIG_PACKAGE_usb-modeswitch=y
+
+
