--- a/doc/config/mt7981-ax3000-mtwifi-cfg.config
+++ b/doc/config/mt7981-ax3000-mtwifi-cfg.config
@@ -347,3 +347,4 @@ CONFIG_PACKAGE_iptables-mod-fullconenat=y
 CONFIG_PACKAGE_iptables-mod-iprange=y
 CONFIG_PACKAGE_iptables-mod-socket=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
+CONFIG_KERNEL_TCP_CONG_BBR2=y
